--- a/WebGentle.BookStore/WebGentle.BookStore/WebGentle.BookStore.csproj
+++ b/WebGentle.BookStore/WebGentle.BookStore/WebGentle.BookStore.csproj
@@ -8,4 +8,9 @@
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.8" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+  </ItemGroup>
+
 </Project>
