--- a/WebGentle.BookStore/WebGentle.BookStore/appsettings.json
+++ b/WebGentle.BookStore/WebGentle.BookStore/appsettings.json
@@ -6,5 +6,21 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-O8GHRRP\\SQLEXPRESS;Database=BookStore;User ID=sa;Password=0w3n1984"
+  },
+  "AllowedHosts": "*",
+  "AppName": "Book store App updated",
+  "DisplayNewBookAlert": true,
+  "NewBookAlert": {
+    "DisplayNewBookAlert": true,
+    "BookName": "A new book Abc.pdf is released"
+  },
+  "infoObj": {
+    "key1": "key 1 value",
+    "key2": "key 2 value",
+    "key3": {
+      "key3obj1": "key 3 obj 1 value"
+    }
+  }
 }
