Login and register

--- a/WebGentle.BookStore/WebGentle.BookStore/appsettings.json
+++ b/WebGentle.BookStore/WebGentle.BookStore/appsettings.json
@@ -12,7 +12,14 @@
   "AllowedHosts": "*",
   "AppName": "Book store App updated",
   "DisplayNewBookAlert": true,
+  "Application": {
+    "LoginPath": "/login"
+  },
   "NewBookAlert": {
+    "DisplayNewBookAlert": true,
+    "BookName": "A new book Abc.pdf is released"
+  },
+  "ThirdPartyBook": {
     "DisplayNewBookAlert": true,
     "BookName": "A new book Abc.pdf is released"
   },
