--- a/WebGentle.BookStore/WebGentle.BookStore/appsettings.json
+++ b/WebGentle.BookStore/WebGentle.BookStore/appsettings.json
@@ -13,7 +13,10 @@
   "AppName": "Book store App updated",
   "DisplayNewBookAlert": true,
   "Application": {
-    "LoginPath": "/login"
+    "LoginPath": "/login",
+    "AppDomain": "http://localhost:53939/",
+    "EmailConfirmation": "confirm-email?uid{0}&token={1}",
+    "ForgotPassword": "reset-password?uid{0}&token={1}"
   },
   "NewBookAlert": {
     "DisplayNewBookAlert": true,
@@ -29,5 +32,16 @@
     "key3": {
       "key3obj1": "key 3 obj 1 value"
     }
+  },
+  "SMTPConfig": {
+    "SenderAddress": "no-reply@bookstoreapp.com",
+    "SenderDisplayName": "Book store team",
+    "UserName": "d1a7ae43b187d9",
+    "Password": "c7e5de5f76a6d6",
+    "Host": "smtp.mailtrap.io",
+    "Port": 587,
+    "EnableSSL": true,
+    "UseDefaultCredentials": true,
+    "IsBodyHTML": true
   }
 }
